--- a/styles/EasyFood.css
+++ b/styles/EasyFood.css
@@ -18,7 +18,7 @@
 
 
 #nav {
-  	text-align: center;   
+  	text-align: center;
 }
 
 
@@ -32,20 +32,20 @@
 #gauche {
  	display: inline-block;
  	background-color: #d98860;
- 	font-family: Helvetica; 
+ 	font-family: Helvetica;
  	height: 540px;
  	width: 300px;
  	font-size: 15px;
  	overflow-y: scroll;
 }
-  
-  
+
+
 .menuEquipe {
   	list-style-type: none;
   	padding-left: 30px;
   	font-size: 22px;
   	text-shadow: 2px 2px 2px blue;
-} 
+}
 
 .menuEquipe ul{
   	list-style-type: none;
@@ -66,7 +66,7 @@
   	color: #ffff00;
   	font-weight: bold;
   	text-shadow: 3px 3px 3px black;
-}	
+}
 
 .menuEquipe img{
   	width: 30px;
@@ -79,8 +79,8 @@
   	margin-left: 20px;
     height: 540px;
 	vertical-align: top;
-	font-family: Helvetica; 
-}	
+	font-family: Helvetica;
+}
 
 #blason{
 	display: inline-block;
@@ -99,8 +99,8 @@
 #infoEquipe{
 	display: inline-block;
 	height: 530px;
-	width: 794px;	
-	text-align: center; 
+	width: 794px;
+	text-align: center;
 }
 
 #infoEquipe #titre{
@@ -123,7 +123,7 @@
 #infoEquipe label{
 	display: inline-block;
 	width: 170px;
-	text-align: left; 
+	text-align: left;
 }
 
 #infoEquipe input[type=text]{
@@ -146,86 +146,94 @@
   	height: 130px;
   	width: 100%;
   	background-image: url("../images/fondbas.png");
-}	
-
-.menuPrincipal {
 }
 
-.menuPrincipal ul{
+/****************************************************/
+
+
+/*styles pour le bandeau                            */
+
+
+/****************************************************/
+
+.bandeau {
+  height: 120px;
+	background: url("../images/easyFoodMini.png") no-repeat left top;
+}
+
+
+/****************************************************/
+
+
+/*styles pour le menu principal                     */
+
+
+/****************************************************/
+
+nav.menuPrincipal {
+  background-color: #C70E1A;
+  font-size: 0px;
+  text-align: left;
+  height: 50px;
+  padding: 0px;
+  margin: 0px;
+}
+
+nav.menuPrincipal ul{
 	list-style-type: none;
 }
 
-.menuPrincipal li{
- 	display: inline-block; 
- 	width: 240px;
- 	height: 130px;
+nav.menuPrincipal li{
+ 	display: inline-block;
+ 	width: 100px;
+ 	height: 30px;
  	font-size: 17px;
  	font-family: Helvetica;
  	font-weight: bold;
  	vertical-align: bottom;
- 	color: #aec5d3;
-}	
+ 	color: white;
+}
 
-.menuPrincipal li:hover
+nav.menuPrincipal li:hover
 {
- 	color: #d98860;
+ 	color: black;
 }
 
-.menuPrincipal img{
- 	width: 80px;
-}
-
-.menuPrincipal img:hover{
- 	width: 100px;
-}
-
-.menuPrincipal .actif img{
- 	width: 100px;
-}
-
-.menuPrincipal .actif{
- 	color: #ffffff;
-}
-
-.menuPrincipal .actif:hover
-{
-	color: #ffffff;
-}
+/****************************************************/
 
 
-#classement{
-	font-family: Helvetica;
-  	width: 1100px;
- 	background-color: #ffffff;
-  	margin-left: auto;
-  	margin-right: auto;
-  	height: 540px;
-  	text-align: center;
-  	overflow-y: scroll;
-}
+/*styles pour le page d'accueil                     */
 
-#tabClassement{
-  margin-right: auto;
+
+/****************************************************/
+
+.texteAccueil {
+  width: 70%;
   margin-left: auto;
-  width: 100%;
-  font-size: 15px;  
-   background-color: #aec5f3;
-}	
-
-#tabClassement thead{
-  	font-size: 30px;
-   background-color: #6e65a0;
+  margin-right: auto;
+  padding-top: 20px;
+  font-size: 17px;
 }
 
-#tabClassement .titreCols{
-	font-size: 18px;
-	background-color: #6e65a0;
+.texteAccueil h1 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-algn: center;
+  text-align: center;
 }
 
+.texteAccueil p {
+  padding-top: 20px;
+  text-align: justify;
+}
 
+.images {
+  text-align: center;
+  padding-top: 30px;
+}
 
-#tabClassement .pair{
-	  background-color: #aec5d3;  
-}	
-
-
+.images img {
+  height: 150px;
+  margin: 10px;
+  padding-bottom: 100px;
+}
