--- a/styles/EasyFood.css
+++ b/styles/EasyFood.css
@@ -1,159 +1,24 @@
-@CHARSET "ISO-8859-1";
-
-#conteneur{
-	margin-left: auto;
-	margin-right: auto;
-	width: 1500px;
-	background-image: url("../images/fond3.png");
-	background-repeat: repeat-x;
-}
-
-#header {
-  	height: 180px;
-  	margin-left: auto;
-  	margin-right: auto;
-  	width: 90%;
-  	padding-top: 5px;
+@charset "ISO-8859-1";
+*{
+	margin:0%;
+	padding:0%;
 }
 
 
-#nav {
-  	text-align: center;
-}
-
-
-#content {
-  	height: 540px;
-  	margin-left: auto;
-  	margin-right: auto;
-  	width: 95%;
-}
-
-#gauche {
- 	display: inline-block;
- 	background-color: #d98860;
- 	font-family: Helvetica;
- 	height: 540px;
- 	width: 300px;
- 	font-size: 15px;
- 	overflow-y: scroll;
-}
-
-
-.menuEquipe {
-  	list-style-type: none;
-  	padding-left: 30px;
-  	font-size: 22px;
-  	text-shadow: 2px 2px 2px blue;
-}
-
-.menuEquipe ul{
-  	list-style-type: none;
-  	border: 1px solid grey;
-}
-
-.menuEquipe a{
-  	color: #ffffff;
-  	font-weight: bold;
-  	text-decoration: none;
-}
-
-.menuEquipe a:hover{
- 	text-shadow: 3px 3px 3px black;
-}
-
-.menuEquipe .actif{
-  	color: #ffff00;
-  	font-weight: bold;
-  	text-shadow: 3px 3px 3px black;
-}
-
-.menuEquipe img{
-  	width: 30px;
-}
-
-#droite {
-  	display: inline-block;
-  	width: 1100px;
-  	background-color: #ffffff;
-  	margin-left: 20px;
-    height: 540px;
-	vertical-align: top;
-	font-family: Helvetica;
-}
-
-#blason{
-	display: inline-block;
-	width: 300px;
-	text-align: center;
-	height: 530px;
-	vertical-align: top;
-	padding-top: 40px;
-}
-
-#blason img{
-	 width: 250px;
-}
-
-
-#infoEquipe{
-	display: inline-block;
-	height: 530px;
-	width: 794px;
-	text-align: center;
-}
-
-#infoEquipe #titre{
-	background-color: #d98860;
-	height: 50px;
-	font-size: 25px;
-	text-align: center;
-	padding-top: 25px;
-	font-weight: bold;
-	text-shadow: 3px 3px 3px blue;
-}
-
-#infoEquipe form{
-	font-size: 25px;
-	text-shadow: 3px 3px 3px blue;
-	padding-top: 30px;
-	padding-left: 30px;
-}
-
-#infoEquipe label{
-	display: inline-block;
-	width: 170px;
-	text-align: left;
-}
-
-#infoEquipe input[type=text]{
-	font-size: 25px;
-	width: 500px;
-	border: 0px;
-}
-
-#infoEquipe input[type=submit]{
-	display: inline-block;
-	font-size: 25px;
-	width: 150px;
-	margin-top: 40px;
-}
-
-
-#bas {
-  	display: block;
-  	//display: table;
-  	height: 130px;
-  	width: 100%;
-  	background-image: url("../images/fondbas.png");
+/****************************************************/
+/*styles pour la zone centrale de la page           */
+/****************************************************/
+main {
+	margin-top: 100px;
+	margin-left: 200px;
+	padding-top: 0px;
+	min-height: 600px;
+ 	font-size: 0px;
+ 	margin-top:200px;
 }
 
 /****************************************************/
-
-
 /*styles pour le bandeau                            */
-
-
 /****************************************************/
 
 .bandeau {
@@ -161,50 +26,98 @@
 	background: url("../images/easyFoodMini.png") no-repeat left top;
 }
 
+/****************************************************/
+/*styles pour le header                             */
+/****************************************************/
+header {
+  height: 90px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
+.formLogo{
+	height: 90px;
+	position: fixed;
+	width: 100px;
+	top: 0;
+	left: 0;
+	z-index: 10;
+}
+
+#logo {
+	margin-top: 10px;
+	width:90px;
+	margin-left:50px;
+
+}
+#separateur_menuP{
+	width: 100%;
+	border: none;
+	background-color: red;
+	margin-top: 120px;
+	height: 7px;
+}
 
 /****************************************************/
-
-
 /*styles pour le menu principal                     */
+/****************************************************/
+nav.menuPrincipal{
+	background-color: #FAFAFA;
+	font-size: 0px;
+	text-align: right;
+	height: 75px;
+	padding: 0px;
 
+
+}
+
+nav.menuPrincipal ul {
+	display: inline-block;
+	list-style: none;
+	margin-top:5px;
+
+
+}
+
+
+nav.menuPrincipal ul li {
+	display: inline-block;
+	font-size: 20px;
+	font-weight: bold;
+	font-family: Helvetica;
+}
+
+
+nav.menuPrincipal ul li a {
+	display: table-cell;
+    text-decoration: none;
+  	color: black;
+  	text-align: center;
+  	vertical-align: middle;
+  	height: 50px;
+  	width: 140px;
+}
+
+nav.menuPrincipal ul li a:hover {
+  color: grey;
+	transition:0.5s;
+}
+
+nav.menuPrincipal ul li .actif {
+		display: table-cell;
+  	background-color: ivory;
+  	color: black;
+  	text-align: center;
+  	vertical-align: middle;
+  	height: 50px;
+  	width: 140px;
+}
 
 /****************************************************/
-
-nav.menuPrincipal {
-  background-color: #C70E1A;
-  font-size: 0px;
-  text-align: left;
-  height: 50px;
-  padding: 0px;
-  margin: 0px;
-}
-
-nav.menuPrincipal ul{
-	list-style-type: none;
-}
-
-nav.menuPrincipal li{
- 	display: inline-block;
- 	width: 100px;
- 	height: 30px;
- 	font-size: 17px;
- 	font-family: Helvetica;
- 	font-weight: bold;
- 	vertical-align: bottom;
- 	color: white;
-}
-
-nav.menuPrincipal li:hover
-{
- 	color: black;
-}
-
-/****************************************************/
-
-
 /*styles pour le page d'accueil                     */
-
-
 /****************************************************/
 
 .texteAccueil {
@@ -236,4 +149,130 @@ nav.menuPrincipal li:hover
   height: 150px;
   margin: 10px;
   padding-bottom: 100px;
+}
+/****************************************************/
+/*styles pour le formulaire d'inscription           */
+/****************************************************/
+
+.inscription{
+	margin-top: 8%;
+	margin-left:35%;
+	height: 100px;
+	z-index: 10;
+	display: inline-block;
+}
+
+.inscription input{
+	background-color: #FAFAFA;
+	border-style: solid;
+	margin-top: 10px;
+	margin-left: 20px;
+	border-width: 2px;
+	border-color: orange;
+	text-align: center;
+	font-size: 16px;
+	letter-spacing: 2px;
+	color: BLACK;
+	border-radius: 10px;
+	width: 400px;
+	height: 40px;
+}
+
+.inscription input[type='submit']:hover{
+	background-color: #F4FA58;
+	border-style: solid;
+	border-width: 2px;
+	border-color: orange;
+	font-size: 16px;
+	letter-spacing: 2px;
+	color: BLACK;
+	transition:0.5s;
+}
+
+
+/****************************************************/
+/*styles pour le formulaire de connexion            */
+/****************************************************/
+
+.contentConnexion{
+	margin-top: 10%;
+	margin-left:35%;
+	height: 100px;
+	z-index: 10;
+	display: inline-block;
+}
+
+.contentConnexion .btnIdent{
+	margin-top: 20px;
+}
+
+.contentConnexion .btn input{
+	background-color: #FAFAFA;
+  border-style: solid;
+	margin-top: 10px;
+	margin-left: 20px;
+  border-width: 2px;
+  border-color: orange;
+	text-align: center;
+  font-size: 16px;
+  letter-spacing: 2px;
+  color: BLACK;
+	border-radius: 10px;
+	width: 400px;
+	height: 40px;
+}
+
+.contentConnexion .btn input[type='submit']{
+		width: 193px;
+		text-transform: uppercase;
+		margin-bottom: 80px;
+}
+
+.contentConnexion .btn #deconexion{
+	width: 400px;
+			text-transform: uppercase;
+}
+.contentConnexion .btn #inscription{
+	width: 400px;
+			text-transform: uppercase;
+}
+
+.contentConnexion .btn a{
+	font-size: 10px;
+	text-transform: uppercase;
+	background-color: #F5ECCE;
+	border-style: solid;
+	border-width: 2px;
+	border-color: orange;
+	letter-spacing: 2px;
+	color: BLACK;
+	margin: 60px;
+}
+
+
+.contentConnexion .btn input[type='reset']{
+		width: 193px;
+		text-transform: uppercase;
+}
+
+.contentConnexion .btn input[type='submit']:hover{
+	background-color: #F4FA58;
+	border-style: solid;
+	border-width: 2px;
+	border-color: orange;
+	font-size: 16px;
+	letter-spacing: 2px;
+	color: BLACK;
+	transition:0.5s;
+}
+
+.contentConnexion .btnIdent input[type='reset']:hover{
+	background-color: #F4FA58;
+	border-style: solid;
+	border-width: 2px;
+	border-color: orange;
+	font-size: 16px;
+	letter-spacing: 2px;
+	color: BLACK;
+	transition:0.5s;
 }
