--- a/styles/EasyFood.css
+++ b/styles/EasyFood.css
@@ -168,22 +168,21 @@ nav.menuPrincipal ul li .actif {
 	margin-top: 10px;
 	margin-left: 20px;
 	border-width: 2px;
-	border-color: orange;
 	text-align: center;
-	font-size: 16px;
+	font-size: 12px;
 	letter-spacing: 2px;
-	color: BLACK;
 	border-radius: 10px;
-	width: 400px;
-	height: 40px;
+	color: BLACK;
+	width: 200px;
+	height: 25px;
 }
 
 .inscription input[type='submit']:hover{
-	background-color: #F4FA58;
+	background-color: #E6E6E6;
 	border-style: solid;
 	border-width: 2px;
-	border-color: orange;
-	font-size: 16px;
+	border-color: red;
+	font-size: 14px;
 	letter-spacing: 2px;
 	color: BLACK;
 	transition:0.5s;
@@ -222,10 +221,15 @@ nav.menuPrincipal ul li .actif {
 	height: 40px;
 }
 
-.contentConnexion .btn input[type='submit']{
-		width: 193px;
-		text-transform: uppercase;
-		margin-bottom: 80px;
+.contentConnexion .btn input[type='submit']:hover{
+	background-color: #E6E6E6;
+	border-style: solid;
+	border-width: 2px;
+	border-color: red;
+	font-size: 14px;
+	letter-spacing: 1px;
+	color: BLACK;
+	transition:0.5s;
 }
 
 .contentConnexion .btn #deconexion{
