--- a/styles/EasyFood.css
+++ b/styles/EasyFood.css
@@ -13,8 +13,9 @@ main {
 	margin-left: 200px;
 	padding-top: 0px;
 	min-height: 600px;
- 	font-size: 0px;
+ 	font-size: 15px;
  	margin-top:200px;
+	font-weight: bold;
 }
 
 /****************************************************/
@@ -39,26 +40,26 @@ header {
 }
 
 .formLogo{
-	height: 90px;
+	height: 70px;
 	position: fixed;
-	width: 100px;
+	width: 60px;
 	top: 0;
 	left: 0;
 	z-index: 10;
 }
 
 #logo {
-	margin-top: 10px;
-	width:90px;
-	margin-left:50px;
-
+	margin-top: 0px;
+	width:60px;
+	height: 70px;
+	margin-left:0px;
 }
 #separateur_menuP{
 	width: 100%;
 	border: none;
 	background-color: red;
-	margin-top: 120px;
-	height: 7px;
+	margin-top: 18px;
+	height: 5px;
 }
 
 /****************************************************/
@@ -168,12 +169,12 @@ nav.menuPrincipal ul li .actif {
 	margin-top: 10px;
 	margin-left: 20px;
 	border-width: 2px;
+	border-color: #474C4B;
 	text-align: center;
 	font-size: 12px;
 	letter-spacing: 2px;
-	border-radius: 10px;
-	color: BLACK;
-	width: 200px;
+	color: black;
+	width: 250px;
 	height: 25px;
 }
 
@@ -182,8 +183,8 @@ nav.menuPrincipal ul li .actif {
 	border-style: solid;
 	border-width: 2px;
 	border-color: red;
-	font-size: 14px;
+	font-size: 15px;
 	letter-spacing: 2px;
-	color: BLACK;
+	color: red;
 	transition:0.5s;
 }
